2005-12-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* TextInfoTest.cs: Added new tests for serialization and for new 2.0
	features.

2005-12-05  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : split the last case in NullCharacter() out
	  and marked it as NotDotNet (.NET is inconsistent between Compare
	  and IndexOf).

2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : added NullCharacter() for bug #76702.

2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : added test for Compare() w/ OrdinalIgnoreCase.

2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : added more tests for some specific cultures
	  (say, Japanese) that have replacement contraction in ASCII range
	  and caused incorrect results for LastIndexOf() and all dependent
	  members.

2005-10-14  Ben Maurer  <bmaurer@ximian.com>

	* DateTimeFormatInfoTest.cs: New test to make sure we do not
	return the same array from GetAllDateTimePatterns.

2005-09-27  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : added testcase for bug #76243.

2005-09-20  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : added empty string cases for IsPrefix/IsSuffix.

2005-09-09  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : added another test for IsSuffix() that I found.

2005-08-14  Gert Driesen  <drieseng@users.sourceforge.net>

	* TextInfoTest.cs: Added ListSeparator test.

2005-08-11  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfoTest.cs : added OptionalCalendars().
	* CompareInfoTest.cs : added possible bug test for checkedFlags 
	  optimization.

2005-07-15  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : Some GetSortKey That tests got working.

2005-07-15  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfoTest.cs : Uncommented tests that got working. Added two
	  cornercase notworking LastIndexOf() tests.

2005-07-14  Atsushi Enomoto  <atsushi@ximian.com>
