@@ -1,3 +1,7 @@
+2005-12-08  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* DaylightTimeTest.cs: New. Serialization interop test cases.
+
 2005-12-06  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* TextInfoTest.cs: Added new tests for serialization and for new 2.0
